--- a/.github/workflows/python-linter.yml
+++ b/.github/workflows/python-linter.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install black pylint
+          pip install -r requirements.txt
 
       # Step 4: Lint Python code with Pylint
       - name: Run Pylint
