--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ annotated-types==0.7.0
 anyio==4.7.0
 astroid==3.3.8
 black==24.10.0
+certifi==2024.12.14
+charset-normalizer==3.4.1
 click==8.1.8
 dill==0.3.9
 fastapi==0.115.6
@@ -17,8 +19,10 @@ platformdirs==4.3.6
 pydantic==2.10.4
 pydantic_core==2.27.2
 pylint==3.3.3
+requests==2.32.3
 sniffio==1.3.1
 starlette==0.41.3
 tomlkit==0.13.2
 typing_extensions==4.12.2
+urllib3==2.3.0
 uvicorn==0.34.0
