--- a/requirements.txt
+++ b/requirements.txt
@@ -15,15 +15,20 @@ mccabe==0.7.0
 mypy-extensions==1.0.0
 numpy==2.2.1
 packaging==24.2
+pandas==2.2.3
 pathspec==0.12.1
 platformdirs==4.3.6
 pydantic==2.10.4
 pydantic_core==2.27.2
 pylint==3.3.3
+python-dateutil==2.9.0.post0
+pytz==2024.2
 requests==2.32.3
+six==1.17.0
 sniffio==1.3.1
 starlette==0.41.3
 tomlkit==0.13.2
 typing_extensions==4.12.2
+tzdata==2024.2
 urllib3==2.3.0
 uvicorn==0.34.0
