--- a/requirements.txt
+++ b/requirements.txt
@@ -186,7 +186,7 @@ plotly==6.0.0
 pluggy==1.5.0
 prison==0.2.1
 propcache==0.2.1
-protobuf
+protobuf==4.21.9
 psutil==6.1.0
 py4j==0.10.9.7
 pyarrow==19.0.0
