--- a/requirements.txt
+++ b/requirements.txt
@@ -1,251 +1,12 @@
-altair==5.5.0
-annotated-types==0.7.0
-anyio==4.7.0
-astroid==3.3.8
-attrs==25.1.0
-black==24.10.0
-blinker==1.9.0
-cachetools==5.5.1
-certifi==2024.12.14
-charset-normalizer==3.4.1
-click==8.1.8
-dill==0.3.9
-duckdb==1.1.3
-fastapi==0.115.6
-fuzzywuzzy==0.18.0
-gitdb==4.0.12
-GitPython==3.1.44
-h11==0.14.0
-idna==3.10
-isort==5.13.2
-Jinja2==3.1.5
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-mccabe==0.7.0
-mdurl==0.1.2
-mypy-extensions==1.0.0
-narwhals==1.24.1
-numpy==2.2.1
-packaging==24.2
-pandas==2.2.3
-pathspec==0.12.1
-pillow==11.1.0
-platformdirs==4.3.6
-plotly
-py4j==0.10.9.7
-pyarrow==19.0.0
-pydantic==2.10.4
-pydantic_core==2.27.2
-pydeck==0.9.1
-Pygments==2.19.1
-pylint==3.3.3
-pyspark==3.5.4
-python-dateutil==2.9.0.post0
-pytz==2024.2
-referencing==0.36.2
-requests==2.32.3
-rich==13.9.4
-rpds-py==0.22.3
-six==1.17.0
-smmap==5.0.2
-sniffio==1.3.1
-starlette==0.41.3
-streamlit==1.41.1
-tenacity==9.0.0
-toml==0.10.2
-tomlkit==0.13.2
-tornado==6.4.2
-typing_extensions==4.12.2
-tzdata==2024.2
-urllib3==2.3.0
-uvicorn==0.34.0
-watchdog==6.0.0
-aiohappyeyeballs==2.4.4
-aiohttp==3.10.11
-aiosignal==1.3.1
-alembic==1.14.0
-altair==5.5.0
-annotated-types==0.7.0
-anyio==4.7.0
 apache-airflow==2.10.4
-apache-airflow-providers-common-compat==1.2.2
-apache-airflow-providers-common-io==1.4.2
-apache-airflow-providers-common-sql==1.20.0
-apache-airflow-providers-fab==1.5.2
-apache-airflow-providers-ftp==3.11.1
-apache-airflow-providers-http==4.13.3
-apache-airflow-providers-imap==3.7.0
-apache-airflow-providers-smtp==1.8.1
-apache-airflow-providers-sqlite==3.9.1
-apispec==6.8.0
-argcomplete==3.5.2
-asgiref==3.8.1
-astroid==3.3.8
-attrs==25.1.0
-babel==2.16.0
-black==24.10.0
-blinker==1.9.0
-cachelib==0.9.0
-cachetools==5.5.1
-certifi==2024.12.14
-cffi==1.17.1
-charset-normalizer==3.4.1
-click==8.1.8
-clickclick==20.10.2
-colorama==0.4.6
-colorlog==6.9.0
-ConfigUpdater==3.2
-connexion==2.14.2
-cron-descriptor==1.4.5
-croniter==5.0.1
-cryptography==43.0.1
-Deprecated==1.2.15
-dill==0.3.9
-distlib==0.3.9
-dnspython==2.7.0
 duckdb==1.1.3
-durationpy==0.9
-email_validator==2.2.0
-fastapi==0.115.6
-filelock==3.17.0
-Flask==2.2.5
-Flask-AppBuilder==4.5.2
-Flask-Babel==2.0.0
-Flask-Caching==2.3.0
-Flask-JWT-Extended==4.7.1
-Flask-Limiter==3.9.2
-Flask-Login==0.6.3
-Flask-Session==0.5.0
-Flask-SQLAlchemy==2.5.1
-Flask-WTF==1.2.2
-frozenlist==1.5.0
-fsspec==2024.10.0
+fastapi==0.115.8
 fuzzywuzzy==0.18.0
-gitdb==4.0.12
-GitPython==3.1.44
-google-auth==2.38.0
-google-re2==1.1.20240702
-googleapis-common-protos
-graphviz==0.20.3
-greenlet==3.1.1
-grpcio==1.68.1
-gunicorn==23.0.0
-h11==0.14.0
-httpcore==1.0.7
-httpx==0.27.0
-idna==3.10
-importlib-metadata==6.11.0
-inflection==0.5.1
-isort==5.13.2
-itsdangerous==2.2.0
-Jinja2==3.1.5
-jmespath==0.10.0
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-kubernetes==32.0.0
-lazy-object-proxy==1.10.0
-Levenshtein==0.26.1
-limits==3.14.1
-linkify-it-py==2.0.3
-lockfile==0.12.2
-Mako==1.3.8
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-marshmallow==3.23.1
-marshmallow-oneofschema==3.1.1
-marshmallow-sqlalchemy==0.28.2
-mccabe==0.7.0
-mdit-py-plugins==0.4.2
-mdurl==0.1.2
-methodtools==0.4.7
-more-itertools==10.5.0
-multidict==6.1.0
-mypy-extensions==1.0.0
-narwhals==1.24.1
-numpy==2.2.1
-oauthlib==3.2.2
-opentelemetry-api==1.27.0
-opentelemetry-exporter-otlp==1.27.0
-opentelemetry-exporter-otlp-proto-common==1.27.0
-opentelemetry-exporter-otlp-proto-grpc==1.27.0
-opentelemetry-exporter-otlp-proto-http==1.27.0
-opentelemetry-proto
-opentelemetry-sdk==1.27.0
-opentelemetry-semantic-conventions==0.48b0
-ordered-set==4.1.0
-packaging==24.2
+numpy==2.2.2
 pandas==2.2.3
-pathspec==0.12.1
 pendulum==3.0.0
-pillow==11.1.0
-platformdirs==4.3.6
 plotly==6.0.0
-pluggy==1.5.0
-prison==0.2.1
-propcache==0.2.1
-protobuf==4.21.9
-psutil==6.1.0
-py4j==0.10.9.7
-pyarrow==19.0.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-pycparser==2.22
-pydantic==2.10.4
-pydantic_core==2.27.2
-pydeck==0.9.1
-Pygments==2.19.1
-PyJWT==2.10.1
-pylint==3.3.3
 pyspark==3.5.4
-python-daemon==3.1.2
-python-dateutil==2.9.0.post0
-python-Levenshtein==0.26.1
-python-nvd3==0.16.0
-python-slugify==8.0.4
-pytz==2024.2
-PyYAML==6.0.2
-RapidFuzz==3.12.1
-referencing==0.36.2
-requests==2.32.3
-requests-oauthlib==2.0.0
-requests-toolbelt==1.0.0
-rfc3339-validator==0.1.4
-rich==13.9.4
-rich-argparse==1.6.0
-rpds-py==0.22.3
-rsa==4.9
-setproctitle==1.3.4
-six==1.17.0
-smmap==5.0.2
-sniffio==1.3.1
-SQLAlchemy==1.4.54
-SQLAlchemy-JSONField==1.0.2
-SQLAlchemy-Utils==0.41.2
-sqlparse==0.5.3
-starlette==0.41.3
-streamlit
-tabulate==0.9.0
-tenacity==9.0.0
-termcolor==2.5.0
-text-unidecode==1.3
-time-machine==2.16.0
-toml==0.10.2
-tomlkit==0.13.2
-tornado==6.4.2
-typing_extensions==4.12.2
-tzdata==2024.2
-uc-micro-py==1.0.3
-universal_pathlib==0.2.5
-urllib3==2.3.0
-uvicorn==0.34.0
-virtualenv==20.29.1
-watchdog==6.0.0
-websocket-client==1.8.0
-Werkzeug
-wirerope==0.4.8
-wrapt==1.17.0
-WTForms==3.2.1
-yarl==1.18.3
-zipp==3.21.0
+pyspark_stubs==3.0.0.post3
+Requests==2.32.3
+streamlit==1.41.1
