--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -1,6 +1,9 @@
 FROM python:3.12-slim
-WORKDIR /app
-COPY requirements.txt ./
-RUN pip install --no-cache-dir -r api/requirements-api.txt
-COPY api /app/api
-CMD ["uvicorn", "api.app:app", "--host", "0.0.0.0", "--port", "8000"]
+WORKDIR /app/api
+
+COPY api/requirements-api.txt .
+RUN pip install --no-cache-dir -r requirements-api.txt
+
+COPY api/ .
+
+CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000"]
