--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,64 +1,73 @@
 version: '3.8'
 
 services:
+  # Conteneur pour l'API FastAPI
   api:
     build:
       context: .
       dockerfile: Dockerfile.api
+    volumes:
+      - ./date_randomseed:/date_randomseed
     ports:
       - "8000:8000"
-    volumes:
-      - ./api:/app/api
-      - ./data:/app/data
-    environment:
-      - UVICORN_PORT=8000
-    command: uvicorn api.app:app --host 0.0.0.0 --port 8000 --reload
+    networks:
+      - banking_network
 
+  # Conteneur pour le script ETL extract.py
   etl_extract:
     build:
       context: .
-      dockerfile: Dockerfile.etl
+      dockerfile: Dockerfile.etl_extract
+    volumes:
+      - ./data/raw:/app/data/raw
+      - ./date_randomseed:/date_randomseed
+    networks:
+      - banking_network
     depends_on:
       - api
-    volumes:
-      - ./etl:/app/etl
-      - ./data:/app/data
-    command: python etl/extract.py
 
-  etl_transform:
+  # Conteneur pour le script ETL transform_load.py (PySpark)
+  etl_transform_load:
     build:
       context: .
-      dockerfile: Dockerfile.etl
+      dockerfile: Dockerfile.etl_transform_load
+    volumes:
+      - ./data/filtered:/app/data/filtered
+    networks:
+      - banking_network
     depends_on:
       - etl_extract
-    volumes:
-      - ./etl:/app/etl
-      - ./data:/app/data
-    command: python etl/transform_load.py
 
-  streamlit:
+  # Conteneur pour l'app Streamlit
+  web_app:
     build:
       context: .
       dockerfile: Dockerfile.streamlit
     ports:
       - "8501:8501"
-    depends_on:
-      - etl_transform
     volumes:
-      - ./app:/app/web_app
-      - ./data:/app/data
-    command: streamlit run web_app/app.py --server.port=8501 --server.address=0.0.0.0
+      - ./data/filtered:/app/data/filtered
+    networks:
+      - banking_network
 
+  # Conteneur pour Airflow
   airflow:
     build:
       context: .
       dockerfile: Dockerfile.airflow
-    ports:
-      - "8080:8080"
     volumes:
       - ./airflow/dags:/opt/airflow/dags
       - ./airflow/logs:/opt/airflow/logs
-      - ./airflow/config:/opt/airflow/config
+    ports:
+      - "8080:8080"
+    networks:
+      - banking_network
     environment:
-      - AIRFLOW_HOME=/opt/airflow
-    command: airflow standalone
+      - AIRFLOW__CORE__EXECUTOR=SequentialExecutor
+      - AIRFLOW__CORE__SQL_ALCHEMY_CONN=sqlite:////opt/airflow/airflow.db
+      - AIRFLOW__WEBSERVER__WORKERS=1
+      - AIRFLOW__API__AUTH_BACKEND=airflow.api.auth.backend.basic_auth
+
+networks:
+  banking_network:
+    driver: bridge
