-updated names and corrected dependencies -moved agencies_counters database in data/database instead of api/app_data (because extract and transform need this database too)(maybe not transform after all? just reading the parquet file could be ok) -docker-compose with 5 containers -build ok -api docker seems fine (running solo is ok) -other docker are under re build (extract, transform_load, web_app, airflow)

--- a/Dockerfile.etl_transform_load
+++ b/Dockerfile.etl_transform_load
@@ -2,10 +2,12 @@
 FROM python:3.12-slim
 
 # Définition du répertoire de travail
-WORKDIR /app/etl
+WORKDIR /app
 
 # Installation de Spark et PySpark
-RUN apt-get update && apt-get install -y wget openjdk-8-jdk \
+# Mise à jour et installation des dépendances nécessaires
+RUN apt-get update && apt-get install -y wget \
+    && apt-get install -y openjdk-17-jdk --no-install-recommends \
     && wget https://archive.apache.org/dist/spark/spark-3.5.4/spark-3.5.4-bin-hadoop3.tgz \
     && tar -xvzf spark-3.5.4-bin-hadoop3.tgz \
     && mv spark-3.5.4-bin-hadoop3 /opt/spark
@@ -15,11 +17,11 @@ ENV SPARK_HOME=/opt/spark
 ENV PATH=$SPARK_HOME/bin:$PATH
 
 # Copie et installation des dépendances Python
-COPY etl/requirements-etl_transform_load.txt .
-RUN pip install --no-cache-dir -r etl_transform_load.txt
+COPY transform_load/requirements-etl_transform_load.txt .
+RUN pip install --no-cache-dir -r requirements-etl_transform_load.txt
 
 # Copie du script de transformation
-COPY etl/transform_load.py .
+COPY transform_load/transform_load.py /app/transform_load/transform_load/.py
 
 # Commande pour soumettre le job Spark
-CMD ["spark-submit", "transform_load.py"]
+CMD ["spark-submit", "transform_load/transform_load.py"]
