--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -1,9 +1,13 @@
 FROM python:3.12-slim
-WORKDIR /app/api
+WORKDIR /app
 
 COPY api/requirements-api.txt .
 RUN pip install --no-cache-dir -r requirements-api.txt
 
-COPY api/ .
+# sub-modules imports needs this architecture
+COPY api/ /app/api/
 
-CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000"]
+# date_randomseed sub module
+COPY date_randomseed/ /app/date_randomseed/
+
+CMD ["uvicorn", "api.app:app", "--host", "0.0.0.0", "--port", "8000"]
