--- a/Dockerfile.etl_extract
+++ b/Dockerfile.etl_extract
@@ -1,9 +1,12 @@
 FROM python:3.12-slim
-WORKDIR /app/etl
+WORKDIR /app
 
-COPY etl/requirements-etl_extract.txt .
+COPY extract/requirements-etl_extract.txt .
 RUN pip install --no-cache-dir -r requirements-etl_extract.txt
 
-COPY etl/extract.py .
+COPY extract/extract.py /app/extract/extract.py
 
-CMD ["python", "extract.py"]
+# date_randomseed sub module
+COPY date_randomseed/ /app/date_randomseed/
+
+CMD ["python3", "-m extract.extract"]
