--- a/Dockerfile.streamlit
+++ b/Dockerfile.streamlit
@@ -1,8 +1,8 @@
 FROM python:3.12-slim
 WORKDIR /app/web_app
 
-COPY web_app/requirements-app.txt .
-RUN pip install --no-cache-dir -r requirements-app.txt
+COPY web_app/requirements-web_app.txt .
+RUN pip install --no-cache-dir -r requirements-web_app.txt
 
 COPY web_app/ .
 
