Docker build strategy change (dev step): -use volumes for all my python code -use images for environnement for each Step -dropped all dependencies -CMD "bash" for all images for now

--- a/Dockerfile.airflow
+++ b/Dockerfile.airflow
@@ -4,6 +4,7 @@ WORKDIR /opt/airflow
 COPY airflow/requirements-airflow.txt .
 RUN pip install --no-cache-dir -r requirements-airflow.txt
 
-COPY airflow/dags /opt/airflow/dags
+# COPY airflow/dags /opt/airflow/dags
 
-CMD ["airflow", "standalone"]
+# CMD ["airflow", "standalone"]
+CMD ["bash"]
