--- a/Dockerfile.etl_transform_load
+++ b/Dockerfile.etl_transform_load
@@ -7,6 +7,7 @@ WORKDIR /app
 # Installation de Spark et PySpark
 # Mise à jour et installation des dépendances nécessaires
 RUN apt-get update && apt-get install -y wget \
+    && apt-get update && apt-get install -y procps \
     && apt-get install -y openjdk-17-jdk --no-install-recommends \
     && wget https://archive.apache.org/dist/spark/spark-3.5.4/spark-3.5.4-bin-hadoop3.tgz \
     && tar -xvzf spark-3.5.4-bin-hadoop3.tgz \
@@ -21,7 +22,8 @@ COPY transform_load/requirements-etl_transform_load.txt .
 RUN pip install --no-cache-dir -r requirements-etl_transform_load.txt
 
 # Copie du script de transformation
-COPY transform_load/transform_load.py /app/transform_load/transform_load/.py
+# COPY transform_load/transform_load.py /app/transform_load/transform_load.py
 
 # Commande pour soumettre le job Spark
-CMD ["spark-submit", "transform_load/transform_load.py"]
+# CMD ["spark-submit", "transform_load/transform_load.py"]
+CMD ["bash"]
