--- a/Dockerfile.streamlit
+++ b/Dockerfile.streamlit
@@ -1,9 +1,10 @@
 FROM python:3.12-slim
-WORKDIR /app/web_app
+WORKDIR /app
 
 COPY web_app/requirements-web_app.txt .
 RUN pip install --no-cache-dir -r requirements-web_app.txt
 
-COPY web_app/ .
+# COPY web_app/ /app/web_app
 
-CMD ["streamlit", "run", "app.py", "--server.port=8501", "--server.address=0.0.0.0"]
+# CMD ["streamlit", "run", "web_app/app.py", "--server.port=8501", "--server.address=0.0.0.0"]
+CMD ["bash"]
