--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,8 @@ services:
       context: .
       dockerfile: Dockerfile.api
     volumes:
-      - ./api/data_app:/app/api/data_app  # for the agencies names and counters database
+      - ./api:/app/api  # for the api code (dev)
+      - ./data/data_base:/app/data/data_base  # for the agencies names and counters database
     ports:
       - "8000:8000"
     networks:
@@ -19,12 +20,14 @@ services:
       context: .
       dockerfile: Dockerfile.etl_extract
     volumes:
+      - ./extract:/app/extract # for the api code (dev)
+      - ./data/data_base:/app/data/data_base  # for the agencies names and counters database
       - ./data/raw:/app/data/raw
-      - ./api/data_app:/app/api/data_app  # for the agencies names and counters database
     networks:
       - banking_network
-    depends_on:
-      - api
+#    depends_on:
+#      api:
+#        condition: service_healthy
 
   # Conteneur pour le script ETL transform_load.py (PySpark)
   etl_transform_load:
@@ -32,12 +35,14 @@ services:
       context: .
       dockerfile: Dockerfile.etl_transform_load
     volumes:
+      - ./transform_load:/app/transform_load
+      - ./data/data_base:/app/data/data_base  # for the agencies names and counters database
+      - ./data/raw:/app/data/raw
       - ./data/filtered:/app/data/filtered
-      - ./api/data_app:/app/api/data_app  # for the agencies names and counters database
     networks:
       - banking_network
-    depends_on:
-      - etl_extract
+#    depends_on:
+#      - etl_extract    # not really depends on etl_extract, depends on CSV files extracted in volume data/raw
 
   # Conteneur pour l'app Streamlit
   web_app:
@@ -47,6 +52,7 @@ services:
     ports:
       - "8501:8501"
     volumes:
+      - ./web_app:/app/web_app
       - ./data/filtered:/app/data/filtered
     networks:
       - banking_network
