--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 apache-airflow==2.10.4
+apache-airflow-providers-docker==4.0.0
 duckdb==1.1.3
 fastapi==0.115.8
 fuzzywuzzy==0.18.0
@@ -11,3 +12,4 @@ Requests==2.32.3
 streamlit==1.41.1
 pylint==3.3.4
 black==25.1.0
+
