--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
 /.venv
 .idea
-temp.py
-*DEBUG*
 *.duckdb
 airflow*.*
 webserver_config.py
@@ -10,3 +8,4 @@ Dockerfile
 **/__pycache__/
 *password*
 read_parquet_file.py
+spark_cache
