--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -1,8 +1,12 @@
 FROM python:3.12-slim
 WORKDIR /app
 
+# Crée un répertoire pour stocker le cache pip (re-build images faster)
+RUN mkdir -p /root/.cache/pip
+
 COPY api/requirements-api.txt .
-RUN pip install --no-cache-dir -r requirements-api.txt
+# RUN pip install --no-cache-dir -r requirements-api.txt
+RUN pip install -r requirements-api.txt --cache-dir=/root/.cache/pip
 
 # sub-modules imports needs this architecture
 # COPY api/ /app/api/
@@ -11,4 +15,4 @@ RUN pip install --no-cache-dir -r requirements-api.txt
 # COPY date_randomseed/ /app/date_randomseed/
 
 # CMD ["uvicorn", "api.app:app", "--host", "0.0.0.0", "--port", "8000"]
-CMD ["bash"]
+# CMD ["bash"]
