--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,11 @@ services:
     volumes:
       - ./api:/app/api  # for the api code (dev)
       - ./data/data_base:/app/data/data_base  # for the agencies names and counters database
+      - pip_cache_api:/root/.cache/pip
     ports:
       - "8000:8000"
+    working_dir: /app
+    command: ["uvicorn", "api.app:app", "--host", "0.0.0.0", "--port", "8000"]
     networks:
       - banking_network
 
@@ -23,6 +26,9 @@ services:
       - ./extract:/app/extract # for the api code (dev)
       - ./data/data_base:/app/data/data_base  # for the agencies names and counters database
       - ./data/raw:/app/data/raw
+      - pip_cache_etl_extract:/root/.cache/pip
+    working_dir: /app
+    command: ["python3", "-m", "extract.extract"]
     networks:
       - banking_network
 #    depends_on:
@@ -35,10 +41,16 @@ services:
       context: .
       dockerfile: Dockerfile.etl_transform_load
     volumes:
-      - ./transform_load:/app/transform_load
+      - ./transform_load:/app/transform_load  # for the script
       - ./data/data_base:/app/data/data_base  # for the agencies names and counters database
       - ./data/raw:/app/data/raw
       - ./data/filtered:/app/data/filtered
+      - pip_cache_etl_transform_load:/root/.cache/pip
+      - apt_cache_etl_transform_load:/var/cache/apt
+      - ./spark_cache:/opt/spark_cache
+    working_dir: /app
+    command: [ "spark-submit", "transform_load/transform_load.py" ]
+#    command: ["sleep", "infinity"]
     networks:
       - banking_network
 #    depends_on:
@@ -54,6 +66,7 @@ services:
     volumes:
       - ./web_app:/app/web_app
       - ./data/filtered:/app/data/filtered
+      - pip_cache_web_app:/root/.cache/pip
     networks:
       - banking_network
 
@@ -65,6 +78,7 @@ services:
     volumes:
       - ./airflow/dags:/opt/airflow/dags
       - ./airflow/logs:/opt/airflow/logs
+      - pip_cache_airflow:/home/airflow/.cache/pip
     ports:
       - "8080:8080"
     networks:
@@ -74,6 +88,17 @@ services:
       - AIRFLOW__CORE__SQL_ALCHEMY_CONN=sqlite:////opt/airflow/airflow.db
       - AIRFLOW__WEBSERVER__WORKERS=1
       - AIRFLOW__API__AUTH_BACKEND=airflow.api.auth.backend.basic_auth
+
+
+volumes:
+  pip_cache_api:
+  pip_cache_etl_extract:
+  pip_cache_etl_transform_load:
+  apt_cache_etl_transform_load:
+  pip_cache_web_app:
+  pip_cache_airflow:
+
+
 
 networks:
   banking_network:
