--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     volumes:
       - ./api:/app/api  # for the api code (dev)
       - ./data/data_base:/app/data/data_base  # for the agencies names and counters database
+      - ./date_randomseed:/app/date_randomseed
       - pip_cache_api:/root/.cache/pip
     ports:
       - "8000:8000"
@@ -25,6 +26,7 @@ services:
     volumes:
       - ./extract:/app/extract # for the api code (dev)
       - ./data/data_base:/app/data/data_base  # for the agencies names and counters database
+      - ./date_randomseed:/app/date_randomseed
       - ./data/raw:/app/data/raw
       - pip_cache_etl_extract:/root/.cache/pip
     working_dir: /app
