refactor(repo): :fire: clean repo from parquet fils, IDE files and update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 /.venv
 .idea
 *.duckdb
+*.parquet
 airflow*.*
 webserver_config.py
 logs*
 Dockerfile
-**/__pycache__/
+__pycache__/
 *password*
 spark_cache
+*.pyc
+*.pyo
