--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,9 +20,11 @@ dependencies = [
     "requests",
     "apache-airflow",
     "pyspark",
-    "duckdb", 
+    "duckdb",
     "streamlit",
     "pyarrow",  # pour parquet
+    "pydantic>=2.0.0",
+    "python-dotenv",
 ]
 
 [project.optional-dependencies]
@@ -40,3 +42,7 @@ ignore = ["E501"]
 
 [tool.ruff.per-file-ignores]
 "__init__.py" = ["F401"]
+
+# Configuration pour hatchling - spécifier où se trouve le code
+[tool.hatch.build.targets.wheel]
+packages = ["src/bank_footfall"]
