fix: :bug: force pythonpath to pwd in .env so local modules works

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@
 AIRFLOW_HOME=$(pwd)/.airflow_home
 AIRFLOW__CORE__DAGS_FOLDER=$(pwd)/airflow/dags
 PROJECT_HOME=$(pwd)/bank-branch-footfall
+PYTHONPATH=$(pwd)
