--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,62 +3,72 @@ steps:
   # 1️⃣ Build API image
   - name: 'gcr.io/cloud-builders/docker'
     args:
-      - 'build'
-      - '-t'
-      - 'europe-west1-docker.pkg.dev/$PROJECT_ID/bank-branch-footfall/api:latest'
-      - './api'
-  
+      [
+        'build',
+        '-t',
+        'europe-west1-docker.pkg.dev/$PROJECT_ID/docker-repo/api:latest',
+        './api'
+      ]
+
   # 2️⃣ Build ETL extract image
   - name: 'gcr.io/cloud-builders/docker'
     args:
-      - 'build'
-      - '-t'
-      - 'europe-west1-docker.pkg.dev/$PROJECT_ID/bank-branch-footfall/etl_extract:latest'
-      - './etl_extract'
+      [
+        'build',
+        '-t',
+        'europe-west1-docker.pkg.dev/$PROJECT_ID/docker-repo/etl_extract:latest',
+        './etl_extract'
+      ]
 
   # 3️⃣ Build ETL transform/load image
   - name: 'gcr.io/cloud-builders/docker'
     args:
-      - 'build'
-      - '-t'
-      - 'europe-west1-docker.pkg.dev/$PROJECT_ID/bank-branch-footfall/etl_transform_load:latest'
-      - './etl_transform_load'
+      [
+        'build',
+        '-t',
+        'europe-west1-docker.pkg.dev/$PROJECT_ID/docker-repo/etl_transform_load:latest',
+        './etl_transform_load'
+      ]
 
   # 4️⃣ Build Streamlit web app image
   - name: 'gcr.io/cloud-builders/docker'
     args:
-      - 'build'
-      - '-t'
-      - 'europe-west1-docker.pkg.dev/$PROJECT_ID/bank-branch-footfall/web_app:latest'
-      - './web_app'
+      [
+        'build',
+        '-t',
+        'europe-west1-docker.pkg.dev/$PROJECT_ID/docker-repo/web_app:latest',
+        './web_app'
+      ]
 
   # 5️⃣ Build Airflow image
   - name: 'gcr.io/cloud-builders/docker'
     args:
-      - 'build'
-      - '-t'
-      - 'europe-west1-docker.pkg.dev/$PROJECT_ID/bank-branch-footfall/airflow:latest'
-      - './airflow'
+      [
+        'build',
+        '-t',
+        'europe-west1-docker.pkg.dev/$PROJECT_ID/docker-repo/airflow:latest',
+        './airflow'
+      ]
 
   # 6️⃣ Push all images to Artifact Registry
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'europe-west1-docker.pkg.dev/$PROJECT_ID/bank-branch-footfall/api:latest']
+    args: ['push', 'europe-west1-docker.pkg.dev/$PROJECT_ID/docker-repo/api:latest']
 
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'europe-west1-docker.pkg.dev/$PROJECT_ID/bank-branch-footfall/etl_extract:latest']
+    args: ['push', 'europe-west1-docker.pkg.dev/$PROJECT_ID/docker-repo/etl_extract:latest']
 
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'europe-west1-docker.pkg.dev/$PROJECT_ID/bank-branch-footfall/etl_transform_load:latest']
+    args: ['push', 'europe-west1-docker.pkg.dev/$PROJECT_ID/docker-repo/etl_transform_load:latest']
 
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'europe-west1-docker.pkg.dev/$PROJECT_ID/bank-branch-footfall/web_app:latest']
+    args: ['push', 'europe-west1-docker.pkg.dev/$PROJECT_ID/docker-repo/web_app:latest']
 
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'europe-west1-docker.pkg.dev/$PROJECT_ID/bank-branch-footfall/airflow:latest']
+    args: ['push', 'europe-west1-docker.pkg.dev/$PROJECT_ID/docker-repo/airflow:latest']
 
 images:
-  - 'europe-west1-docker.pkg.dev/$PROJECT_ID/bank-branch-footfall/api:latest'
-  - 'europe-west1-docker.pkg.dev/$PROJECT_ID/bank-branch-footfall/etl_extract:latest'
-  - 'europe-west1-docker.pkg.dev/$PROJECT_ID/bank-branch-footfall/etl_transform_load:latest'
-  - 'europe-west1-docker.pkg.dev/$PROJECT_ID/bank-branch-footfall/web_app:latest'
-  - 'europe-west1-docker.pkg.dev/$PROJECT_ID/bank-branch-footfall/airflow:latest'
+  - 'europe-west1-docker.pkg.dev/$PROJECT_ID/docker-repo/api:latest'
+  - 'europe-west1-docker.pkg.dev/$PROJECT_ID/docker-repo/etl_extract:latest'
+  - 'europe-west1-docker.pkg.dev/$PROJECT_ID/docker-repo/etl_transform_load:latest'
+  - 'europe-west1-docker.pkg.dev/$PROJECT_ID/docker-repo/web_app:latest'
+  - 'europe-west1-docker.pkg.dev/$PROJECT_ID/docker-repo/airflow:latest'
