--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,14 @@
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["setuptools>=61", "wheel"]
+build-backend = "setuptools.build_meta"
 
 [project]
 name = "bank-footfall"
 version = "0.1.0"
 description = "Data engineering project to track simulated footfall in banking agencies"
-authors = [
-    { name = "Michael Garcia" }
-]
+authors = [{ name = "Michael Garcia" }]
 readme = "README.md"
 requires-python = ">=3.9"
-
-# Dépendances basées sur votre requirements.txt existant
 dependencies = [
     "fastapi",
     "uvicorn[standard]",
@@ -22,10 +18,18 @@ dependencies = [
     "pyspark",
     "duckdb",
     "streamlit",
-    "pyarrow",  # pour parquet
+    "pyarrow",
     "pydantic>=2.0.0",
     "python-dotenv",
+    "fuzzywuzzy>=0.18.0",
+    "pydantic-settings>=2.11.0",
+    "python-levenshtein>=0.27.1",
 ]
+
+[tool.setuptools.packages.find]
+# Scans for packages=bank_footfall + __init__.py automatically
+where = ["src"]
+
 
 [project.optional-dependencies]
 dev = [
@@ -43,6 +47,3 @@ ignore = ["E501"]
 [tool.ruff.per-file-ignores]
 "__init__.py" = ["F401"]
 
-# Configuration pour hatchling - spécifier où se trouve le code
-[tool.hatch.build.targets.wheel]
-packages = ["bank_footfall"]
