--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,8 +47,10 @@ ignore = ["E501"]
 [tool.ruff.per-file-ignores]
 "__init__.py" = ["F401"]
 
-[dependency-groups]
-dev = [
+[dependency-groups.dev]
+optional = true
+dependencies = [
     "pre-commit>=4.2.0",
     "ruff>=0.12.0",
+    "pytest-cov>=5.0",
 ]
