--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,20 +45,19 @@ jobs:
 
     - name: Install dependencies
       run: |
-        uv sync --extra dev
+        run: uv sync --dev  # Simplified: --dev alone installs [dependency-groups.dev]
 
     - name: Run pre-commit hooks
       run: |
         uv run pre-commit run --all-files
 
     - name: Run tests
-      run: |
-        uv run pytest --cov=bank_footfall --cov-report=xml
+      run: uv run pytest tests/ --cov=bank_footfall --cov-report=xml  # Added tests/ for discovery
       env:
         DATABASE_URL: postgresql://testuser:testpass@localhost:5432/testdb
 
     - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v3
+      uses: codecov/codecov-action@v4  # Latest stable
       if: matrix.python-version == '3.11'
       with:
         file: ./coverage.xml
