--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,18 +27,9 @@ dependencies = [
 ]
 
 [tool.setuptools.packages.find]
-# Scans for packages=bank_footfall + __init__.py automatically
 where = ["src"]
 
-
-[project.optional-dependencies]
-dev = [
-    "pytest",
-    "ruff",
-    "pre-commit",
-]
-
-# Configuration Ruff pour le linting/formatting
+# Ruff config (unchanged)
 [tool.ruff]
 line-length = 88
 select = ["E", "W", "F", "I"]
@@ -47,10 +38,11 @@ ignore = ["E501"]
 [tool.ruff.per-file-ignores]
 "__init__.py" = ["F401"]
 
-[dependency-groups.dev]
-optional = true
-dependencies = [
-    "pre-commit>=4.2.0",
-    "ruff>=0.12.0",
-    "pytest-cov>=5.0",
+# Single source of truth for dev deps
+[dependency-groups]
+dev = [
+  "pre-commit",
+  "ruff",
+  "pytest",
+  "pytest-cov",
 ]
