fix(ci): correct uv sync --dev YAML syntax
Runner saw malformed 'run: uv sync --dev # Simplified...' as shell command.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        run: uv sync --dev
+        uv sync --dev
 
     - name: Run pre-commit hooks
       run: |
@@ -53,10 +53,12 @@ jobs:
 
     - name: Run tests
       run: uv run pytest tests/ --cov=bank_footfall --cov-report=xml
+      run: uv run pytest tests/ --cov=bank_footfall --cov-report=xml
       env:
         DATABASE_URL: postgresql://testuser:testpass@localhost:5432/testdb
 
     - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v4  
       uses: codecov/codecov-action@v4  
       if: matrix.python-version == '3.11'
       with:
