--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "pydantic-settings>=2.11.0",
     "python-levenshtein>=0.27.1",
     "sqlmodel>=0.0.21",
+    "plotly>=6.5.0",
 ]
 
 [tool.setuptools.packages.find]
