--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-apache-airflow==2.10.4
-apache-airflow-providers-docker==4.0.0
+apache-airflow>=3.1.6
+apache-airflow-providers-docker>=4.0.0
 duckdb==1.1.3
 fastapi==0.115.8
 fuzzywuzzy==0.18.0
